# blueprint-library-pip

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  maintain this blueprint.md  prepare the blueprint.md  pyproject.toml  rebuild the blueprint from scratch.md  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  main.yml  publish.yml
alfred/: build.py  ci.py  docker.py  docs.py  lint.py  publish.py  run.py  tests.py  twine.py
docs/: conf.py  index.rst
docs/_build/doctrees/: api.doctree  environment.pickle  getting_started.doctree  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt  index.rst.txt
mylib/: __init__.py  __main__.py
mylib_tests/units/: test_app.py
src/: main.py  utils.py
src/app/: main.py
src/lib/: main.py
src/mylib/: __init__.py
tests/: test_utils.py
tests/units/: test_app.py
