[tool.poetry]
name = "blueprint-library-pip"
description = "blueprint to implement a library in python to deploy on pypi"
authors = ["Fabien Arcellier <fabien.arcellier@gmail.com>"]
license = "MIT"
version = "1.0.0"
readme = "README.md"
packages = [{include = "lib", from = "src"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console"
]

[tool.poetry.dependencies]
python = "^3.10"



[tool.poetry.group.dev.dependencies]
alfred-cli = "^2.1.1"
mypy = "^1.4.1"
pytest = "^7.4.0"
toml = "^0.10.2"
sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
