[metadata]
name = mycommand
version = 0.0.1
description =
long_description = file: README.md
long_description_content_type = text/markdown
authors =
    "Fabien Arcellier<fabien.arcellier@gmail.com>"
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
license = MIT
readme = README.md
url = https://github.com/FabienArcellier/fixtup

[options]
packages = find:
package_dir =
    =src
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    alfred-cli
    mypy
    pylint
