[metadata]
name = mylib
version = attr:mylib.__version__
description = bla bla bla bla
long_description = file: README.md
long_description_content_type = text/markdown
authors =
    "Fabien Arcellier<fabien.arcellier@gmail.com>"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Environment :: Console
license = MIT
readme = README.md

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.6
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    alfred-cli
    build
    mypy
    twine

[mypy]
ignore_missing_imports = True
